feat: automatische Supabase migraties en Vercel deployment configuratie
- Voeg Supabase CLI toe voor automatische migraties
- Update vercel.json met build:with-migration command
- Fix Vercel regio van ams1 naar fra1 (geldige regio)
- Voeg migration script toe (run-migration-cli.js)
- Update documentatie met automatische migratie instructies
- Voeg VERCEL_SETUP.md toe voor troubleshooting

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:with-migration",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["ams1"]
+  "regions": ["fra1"],
+  "env": {
+    "SKIP_ENV_VALIDATION": "1"
+  }
 }
