--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:with-migration": "npm run migrate && npm run build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "migrate": "node scripts/run-migration-cli.js",
+    "migrate:check": "supabase db remote commit"
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
@@ -17,6 +20,7 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@supabase/cli": "^1.200.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
