--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@supabase/cli": "^1.200.0",
+    "supabase": "^2.70.5",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
