--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.0",
     "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.468.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
