--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.0",
     "bcryptjs": "^3.0.3",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.468.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "supabase": "^2.70.5",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
@@ -29,6 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "supabase": "^2.70.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
