--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.0",
+    "@tanstack/react-query": "^5.90.20",
     "bcryptjs": "^3.0.3",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.468.0",
