--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^3.0.3",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.468.0",
+    "motion": "^12.29.2",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
