--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "build:with-migration": "npm run migrate && npm run build",
     "start": "next start",
     "lint": "eslint",
