Weekmenu: 7 dagen met tekst/link, API, Realtime, migratie 006 + scripts laden .env.local

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start",
     "lint": "eslint",
     "migrate": "node scripts/run-migration-cli.js",
+    "migrate:weekmenu": "node scripts/run-weekmenu-migration.js",
     "migrate:check": "supabase db remote commit"
   },
   "dependencies": {
